--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;0,500;0,600;0,700;1,200&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
+
 html,
 body, * {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Poppins";
   box-sizing: border-box;
-
 }
+
+body {
+  background-color: rgb(255, 255, 255);
+}
+
 ::-webkit-scrollbar {
   width: 0px;
 }
@@ -65,7 +72,8 @@ width: 100%;
     margin-left: 6px;
 }
 .logo{
-  color: gray;
+  color: rgb(199, 199, 199);
+  font-weight: 600;
   font-size: 18px;
 
 }
@@ -616,15 +624,14 @@ margin-top: 160px;
   margin-top: 10px;
 }
 
-@media screen and (max-width:800px) {
+@media screen and (max-width:1000px) {
   .hero-banner-container{
     height: 560px;
   }
   .hero-banner-image{
-    width: 77%;
-    height: 62%;
-    top: -2%;
-    right: -6%;
+    height: 300px;
+    top: 0%;
+    right: 0%;
   }
   .footer-banner-container{
     height: 560px;
@@ -661,6 +668,7 @@ margin-top: 160px;
     line-height: 1.3;
   }
   .hero-banner-container h1{
+    margin-left: 0;
     font-size: 50px;
   }
  .hero-banner-container h3{
